default page set to Events.aspx; removed About & Contact pages

--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventsSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+   
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -61,6 +62,12 @@
     </sessionState>
   </system.web>
   <system.webServer>
+     <defaultDocument>
+      <files>
+        <clear />
+        <add value="Events.aspx" />
+      </files>
+    </defaultDocument>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
