admin part started

--- a/EventSystem/EventSystem.csproj
+++ b/EventSystem/EventSystem.csproj
@@ -393,6 +393,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Admin\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
