--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -117,6 +117,14 @@
   <location path="Admin">
     <system.web>
       <authorization>
+        <deny users="*"/>
+        <allow roles="admin"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Events">
+    <system.web>
+      <authorization>
         <deny users="?"/>
       </authorization>
     </system.web>
