--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -65,7 +65,7 @@
      <defaultDocument>
       <files>
         <clear />
-        <add value="Events.aspx" />
+        <add value="Home.aspx" />
       </files>
     </defaultDocument>
     <modules>
