Added redirects to home with forms authentication

--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -12,8 +12,9 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventsSystem;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-   
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms name=".ASPXFORMSAUTH" loginUrl="~/Home.aspx" defaultUrl="~/Default.aspx" requireSSL="false" protection="All" slidingExpiration="true" path="/" timeout="240"  cookieless="UseDeviceProfile" enableCrossAppRedirects="false" />
+    </authentication> 
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -69,7 +70,7 @@
       </files>
     </defaultDocument>
     <modules>
-      <remove name="FormsAuthentication" />
+      <!--<remove name="FormsAuthentication" />-->
     </modules>
   </system.webServer>
   <runtime>
