Fixed edit categories path

--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -118,7 +118,7 @@
   <location path="Admin">
     <system.web>
       <authorization>
-        <deny users="*"/>
+        <!--<deny users="*"/>-->
         <allow roles="admin"/>
       </authorization>
     </system.web>
