--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventsSystem;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    
     <authentication mode="Forms">
       <forms name=".ASPXFORMSAUTH" loginUrl="~/Home.aspx" defaultUrl="~/Default.aspx" requireSSL="false" protection="All" slidingExpiration="true" path="/" timeout="240"  cookieless="UseDeviceProfile" enableCrossAppRedirects="false" />
     </authentication> 
@@ -118,8 +119,8 @@
   <location path="Admin">
     <system.web>
       <authorization>
-        <!--<deny users="*"/>-->
         <allow roles="admin"/>
+      <deny users="*"/>
       </authorization>
     </system.web>
   </location>
