--- a/EventSystem/EventSystem.csproj
+++ b/EventSystem/EventSystem.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" />
@@ -171,12 +171,12 @@
     <Content Include="Account\VerifyPhoneNumber.aspx" />
     <Content Include="Admin\EditCategories.aspx" />
     <Content Include="Admin\EditEvents.aspx" />
-    <Content Include="Admin\EditUsers.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="ControlsTestingPage.aspx" />
     <Content Include="Controls\LikeButton.ascx" />
+    <Content Include="Controls\LikeControl.ascx" />
     <Content Include="Controls\MindYourLanguage.ascx" />
     <Content Include="Controls\Spinner.ascx" />
     <Content Include="Events\All.aspx" />
@@ -189,6 +189,16 @@
     <Content Include="Account\Web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Home.aspx" />
+    <Content Include="LikesTestingPage.aspx" />
+    <Content Include="Public\Default\Event\1453918504_free-20.png" />
+    <Content Include="Public\Default\Event\1453918506_free-20.png" />
+    <Content Include="Public\Default\Event\1453918508_free-20.png" />
+    <Content Include="Public\Default\Event\1453918512_free-20.png" />
+    <Content Include="Public\Default\Event\1453918514_free-20.png" />
+    <Content Include="Public\Default\Event\1453918518_free-20.png" />
+    <Content Include="Public\Default\Event\1453918520_free-20.png" />
+    <Content Include="Public\Default\Event\1453918523_free-20.png" />
+    <Content Include="Public\Default\Event\1453918524_free-20.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -229,6 +239,7 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="stylecop.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -357,13 +368,6 @@
     <Compile Include="Admin\EditEvents.aspx.designer.cs">
       <DependentUpon>EditEvents.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Admin\EditUsers.aspx.cs">
-      <DependentUpon>EditUsers.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin\EditUsers.aspx.designer.cs">
-      <DependentUpon>EditUsers.aspx</DependentUpon>
-    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -381,6 +385,12 @@
     </Compile>
     <Compile Include="Controls\LikeButton.ascx.designer.cs">
       <DependentUpon>LikeButton.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\LikeControl.ascx.cs">
+      <DependentUpon>LikeControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\LikeControl.ascx.designer.cs">
+      <DependentUpon>LikeControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="Controls\MindYourLanguage.ascx.cs">
       <DependentUpon>MindYourLanguage.ascx</DependentUpon>
@@ -417,6 +427,7 @@
     <Compile Include="Events\Details.aspx.designer.cs">
       <DependentUpon>Details.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EvestSytemDbContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -427,6 +438,13 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="LikesTestingPage.aspx.cs">
+      <DependentUpon>LikesTestingPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LikesTestingPage.aspx.designer.cs">
+      <DependentUpon>LikesTestingPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData.cs" />
     <Compile Include="Models\Category.cs" />
@@ -434,6 +452,7 @@
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\EventSystemDbContext.cs" />
     <Compile Include="Models\AppUser.cs" />
+    <Compile Include="Models\Like.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.aspx.cs">
       <DependentUpon>Search.aspx</DependentUpon>
