--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -12,10 +12,10 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventsSystem;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    
+   
     <authentication mode="Forms">
       <forms name=".ASPXFORMSAUTH" loginUrl="~/Home.aspx" defaultUrl="~/Default.aspx" requireSSL="false" protection="All" slidingExpiration="true" path="/" timeout="240"  cookieless="UseDeviceProfile" enableCrossAppRedirects="false" />
-    </authentication> 
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -27,6 +27,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    
     <membership>
       <providers>
         <!--
@@ -62,9 +63,12 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <customErrors mode="On" defaultRedirect="~/Errors/404.aspx">
+      <error statusCode="404" redirect="~/Errors/404.aspx" />
+    </customErrors>
   </system.web>
   <system.webServer>
-     <defaultDocument>
+    <defaultDocument>
       <files>
         <clear />
         <add value="Home.aspx" />
@@ -120,7 +124,7 @@
     <system.web>
       <authorization>
         <allow roles="admin"/>
-      <deny users="*"/>
+        <deny users="*"/>
       </authorization>
     </system.web>
   </location>
