--- a/EventSystem/EventSystem.csproj
+++ b/EventSystem/EventSystem.csproj
@@ -180,11 +180,8 @@
     <Content Include="Controls\LikeControl.ascx" />
     <Content Include="Controls\MindYourLanguage.ascx" />
     <Content Include="Controls\Spinner.ascx" />
-
     <Content Include="Controls\StatsControl.ascx" />
-
     <Content Include="Errors\404.aspx" />
-
     <Content Include="Events\All.aspx" />
     <Content Include="Events\Create.aspx" />
     <Content Include="Events\Details.aspx" />
@@ -193,6 +190,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Account\Web.config" />
+    <Content Include="fonts\Impregnable_Personal_Use_Only.ttf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Home.aspx" />
     <Content Include="LikesTestingPage.aspx" />
@@ -419,14 +417,13 @@
     <Compile Include="Controls\Spinner.ascx.designer.cs">
       <DependentUpon>Spinner.ascx</DependentUpon>
     </Compile>
-
     <Compile Include="Controls\StatsControl.ascx.cs">
       <DependentUpon>StatsControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Controls\StatsControl.ascx.designer.cs">
       <DependentUpon>StatsControl.ascx</DependentUpon>
-	</Compile>
+    </Compile>
     <Compile Include="Errors\404.aspx.cs">
       <DependentUpon>404.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
