--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -63,9 +63,9 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
-    <customErrors mode="On" defaultRedirect="~/Errors/404.aspx">
+    <!--<customErrors mode="On" defaultRedirect="~/Errors/404.aspx">
       <error statusCode="404" redirect="~/Errors/404.aspx" />
-    </customErrors>
+    </customErrors>-->
   </system.web>
   <system.webServer>
     <defaultDocument>
