--- a/EventSystem/Web.config
+++ b/EventSystem/Web.config
@@ -12,13 +12,12 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=EventsSystem;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-   
     <authentication mode="Forms">
       <forms name=".ASPXFORMSAUTH" loginUrl="~/Home.aspx" defaultUrl="~/Default.aspx" requireSSL="false" protection="All" slidingExpiration="true" path="/" timeout="240"  cookieless="UseDeviceProfile" enableCrossAppRedirects="false" />
     </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
-    <pages>
+    <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" />
+    <pages validateRequest="false">
       <namespaces>
         <add namespace="System.Web.Optimization" />
         <add namespace="Microsoft.AspNet.Identity" />
@@ -27,7 +26,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-    
+
     <membership>
       <providers>
         <!--
